<resources>
    <string name="app_name">MyMovieList</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">Create a new account</string>
    <string name="text_already_member">Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">MyMovieList</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="background_colors">Background Colors</string>
    <string name="white">White</string>
    <string name="gray">Gray</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="WHITE_CAP">WHITE</string>
    <string name="GRAY_CAP">GRAY</string>
    <string name="GREEN_CAP">GREEN</string>
    <string name="BLUE_CAP">BLUE</string>
    <string name="RED_CAP">RED</string>
    <string name="setbgwhite">Set background to white</string>
    <string name="setbggray">Set background to gray</string>
    <string name="setbggreen">Set background to green</string>
    <string name="setbgblue">Set background to blue</string>
    <string name="setbgred">Set background to red</string>
    <string name="THEME_KEY">Theme</string>
    <string name="list">List</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>

    <string-array name="rating_array">
        <item>-</item>
        <item>10</item>
        <item>9</item>
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>

    <string-array name="status_array">
        <item>-</item>
        <item>Watched</item>
        <item>Plan To Watch</item>
        <item>Dropped</item>
        <item>On Hold</item>
    </string-array>

</resources>
